[package]
name = "expanded-pathbuf"
version = "1.0.0"
edition = "2024"
license = "MPL-2.0"
description = "PathBuf with shell variable expansion."

[dependencies]
anyhow = "1"
derive_more = { version = "2", features = [
    "as_ref",
    "deref",
    "deref_mut",
    "from",
] }
shellexpand = "3"

[dev-dependencies]
directories = "6"
